--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your E-commerce Site</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header>
-        <video autoplay muted loop id="bg-video">
-            <source src="assets/videos/hero.mp4" type="video/mp4">
-            Your browser does not support the video tag.
+        <video autoplay muted loop>
+            <source src="assets/videos/background.mp4" type="video/mp4">
         </video>
-        <div class="content">
-            <img src="assets/images/logo.png" alt="Site Logo">
-            <h1>Welcome to Our Store</h1>
-        </div>
-    </header><section>
-    <img src="assets/images/featured-product.jpg" alt="Featured Product">
-    <p>Discover the latest trends!</p>
-</section>
-
+    </header>
+    <section class="upload-section">
+        <img src="assets/images/upload_box.png" alt="Upload Box">
+    </section>
+    <section class="glowing-buttons">
+        <button class="room-button"><img src="assets/images/room_icon.png" alt="Room"></button>
+        <button class="vr-button"><img src="assets/images/vr_icon.png" alt="VR Game"></button>
+    </section>
+    <footer>
+        <video autoplay muted loop>
+            <source src="assets/videos/footer_animation.mp4" type="video/mp4">
+        </video>
+    </footer>
 </body>
 </html>
