--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <video autoplay muted loop>
-            <source src="assets/videos/background.mp4" type="video/mp4">
+            <source src="assets/videos/hero.mp4" type="video/mp4">
         </video>
     </header>
     <section class="upload-section">
