--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-<!DOCTYPE html><html lang="en" class="__variable_b38aaf __variable_d65c78 __variable_0aa2f2 overscroll-y-none"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/><link rel="preload" href="assets/font/14d7ce3e41dcbb66-s.p.woff" as="font" type="font/woff2"/><link rel="preload" href="assets/font/1b0b3615811be75b-s.p.woff" as="font" type="font/woff2"/><link rel="preload" href="assets/font/a34f9d1faa5f3315-s.p.woff" as="font" type="font/woff2"/><link rel="preload" href="assets/font/c92e08b531692979-s.p.woff" as="font" type="font/woff2"/><link rel="preload" href="assets/font/e8b276476c0ac6fa-s.p.woff" as="font" type="font/woff2"/><link rel="preload" as="image" href="assets/font/d97ea0940c0302a26ddd7c1b56cf3346.svg" fetchPriority="high"/><link rel="preload" as="image" imageSrcSet="assets/images/hero-illustration.7100a376_w-640-q-75.jpg 640w, assets/images/hero-illustration.7100a376_w-750-q-75.jpg 750w, assets/images/hero-illustration.7100a376_w-828-q-75.jpg 828w, assets/images/hero-illustration.7100a376_w-1080-q-75.jpg 1080w, assets/images/hero-illustration.7100a376_w-1200-q-75.jpg 1200w, assets/images/hero-illustration.7100a376_w-1920-q-75.jpg 1920w, assets/images/hero-illustration.7100a376_w-2048-q-75.jpg 2048w, assets/images/hero-illustration.7100a376_w-3840-q-75.jpg 3840w" imageSizes="100vw" fetchPriority="high"/><link rel="stylesheet" href="assets/css/9c499ca8fd09461a.css" data-precedence="next"/><link rel="stylesheet" href="assets/css/2cfc5f73f17d6511.css" data-precedence="next"/>
-</head></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Site</title>
+  
+  <!-- Preload Critical Fonts -->
+  <link rel="preload" href="assets/font/14d7ce3e41dcbb66-s.p.woff2" as="font" type="font/woff2" crossorigin>
+  
+  <!-- Preload Hero Image -->
+  <link rel="preload" as="image" href="assets/images/hero.jpg" imagesrcset="assets/images/hero-640.jpg 640w, assets/images/hero-1920.jpg 1920w" imagesizes="100vw">
+  
+  <!-- Static CSS -->
+  <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+<body class="overscroll-y-none">
+  <!-- Your content here -->
+  <script src="assets/js/script.js"></script>
+</body>
+</html>
