--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preload" href="assets/font/14d7ce3e41dcbb66-s.p.woff2" as="font" type="font/woff2" crossorigin>
   
   <!-- Preload Hero Image -->
-  <link rel="preload" as="image" href="assets/images/hero.jpg" imagesrcset="assets/images/hero-640.jpg 640w, assets/images/hero-1920.jpg 1920w" imagesizes="100vw">
+  <link rel="preload" as="image" href="assets/images/d97ea0940c0302a26ddd7c1b56cf3346.svg" imagesrcset="assets/images/hero-illustration.7100a376_w-640-q-75.jpg 640w, assets/images/hero-illustration.7100a376_w-750-q-75.jpg 750w" imagesizes="100vw">
   
   <!-- Static CSS -->
   <link rel="stylesheet" href="assets/css/styles.css">
