--- a/index.html
+++ b/index.html
@@ -1,100 +1,114 @@
 <!DOCTYPE html>
 <html lang="en" class="overscroll-y-none">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-    <link rel="stylesheet" href="assets/css/9c499ca8fd09461a.css"/>
-    <link rel="stylesheet" href="assets/css/2cfc5f73f17d6511.css"/>
-    <meta name="theme-color" content="#090a0c"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="theme-color" content="#090a0c">
     <title>Everything App for your teams</title>
-    <link rel="canonical" href="https://huly.io" />
-    <meta name="description" content="Huly, an open-source platform, serves as an all-in-one replacement of Linear, Jira, Slack, and Notion."/>
-    <link rel="manifest" href="https://huly.io/manifest.webmanifest" />
-    <meta property="og:title" content="Everything App for your teams"/>
-    <meta property="og:description" content="Huly, an open-source platform, serves as an all-in-one replacement of Linear, Jira, Slack, and Notion."/>
-    <meta property="og:url" content="https://huly.io/"/>
-    <meta property="og:site_name" content="Huly"/>
-    <meta property="og:image" content="images/social-previews/index.jpg"/>
-    <meta property="og:type" content="website"/>
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content="Everything App for your teams"/>
-    <meta name="twitter:description" content="Huly, an open-source platform, serves as an all-in-one replacement of Linear, Jira, Slack, and Notion."/>
-    <meta name="twitter:image" content="images/social-previews/index.jpg"/>
-    <link rel="icon" href="favicon/favicon.svg"/>
-    <link rel="apple-touch-icon" href="favicon/favicon.png"/>
-    <link rel="apple-touch-icon" href="favicon/favicon-48x48.png" sizes="48x48" type="image/png"/>
-    <link rel="apple-touch-icon" href="favicon/favicon-72x72.png" sizes="72x72" type="image/png"/>
-    <link rel="apple-touch-icon" href="favicon/favicon-96x96.png" sizes="96x96" type="image/png"/>
-    <link rel="apple-touch-icon" href="favicon/favicon-144x144.png" sizes="144x144" type="image/png"/>
-    <link rel="apple-touch-icon" href="favicon/favicon-192x192.png" sizes="192x192" type="image/png"/>
-    <link rel="apple-touch-icon" href="favicon/favicon-256x256.png" sizes="256x256" type="image/png"/>
-    <link rel="apple-touch-icon" href="favicon/favicon-384x384.png" sizes="384x384" type="image/png"/>
-    <link rel="apple-touch-icon" href="favicon/favicon-512x512.png" sizes="512x512" type="image/png"/>
+    <meta name="description" content="Huly, an open-source platform, serves as an all-in-one replacement of Linear, Jira, Slack, and Notion.">
+    <link rel="canonical" href="https://huly.io">
+    <meta property="og:title" content="Everything App for your teams">
+    <meta property="og:description" content="Huly, an open-source platform, serves as an all-in-one replacement of Linear, Jira, Slack, and Notion.">
+    <meta property="og:url" content="https://huly.io/">
+    <meta property="og:site_name" content="Huly">
+    <meta property="og:image" content="assets/images/social-previews/index.jpg">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Everything App for your teams">
+    <meta name="twitter:description" content="Huly, an open-source platform, serves as an all-in-one replacement of Linear, Jira, Slack, and Notion.">
+    <meta name="twitter:image" content="assets/images/social-previews/index.jpg">
+    <link rel="icon" href="assets/images/favicon/favicon.svg">
+    <link rel="apple-touch-icon" href="assets/images/favicon/favicon.png">
+    <!-- Preload Fonts -->
+    <link rel="preload" href="assets/fonts/14d7ce3e41dcbb66-s.p.woff" as="font" type="font/woff2">
+    <link rel="preload" href="assets/fonts/1b0b3615811be75b-s.p.woff" as="font" type="font/woff2">
+    <link rel="preload" href="assets/fonts/a34f9d1faa5f3315-s.p.woff" as="font" type="font/woff2">
+    <link rel="preload" href="assets/fonts/c92e08b531692979-s.p.woff" as="font" type="font/woff2">
+    <link rel="preload" href="assets/fonts/e8b276476c0ac6fa-s.p.woff" as="font" type="font/woff2">
+    <!-- Preload Images -->
+    <link rel="preload" href="assets/images/d97ea0940c0302a26ddd7c1b56cf3346.svg" as="image">
+    <link rel="preload" href="assets/images/hero-illustration.7100a376_w-1920-q-75.jpg" as="image">
+    <!-- Add CSS (to be provided later) -->
+    <link rel="stylesheet" href="assets/css/styles.css"> <!-- Placeholder for your CSS file -->
 </head>
 <body class="overscroll-y-none bg-grey-1">
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5PP3NPSN" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- Header -->
     <header class="absolute left-0 right-0 top-0 z-40 h-16 bg-transparent transition-colors duration-200 px-safe pt-safe">
         <div class="container relative z-10 flex h-full items-center" aria-label="Global">
-            <a class="transition-colors duration-200 transition-all duration-200" href="index.html">
+            <a class="transition-colors duration-200" href="index.html">
                 <span class="sr-only">Huly</span>
-                <img alt="Huly logo" fetchPriority="high" width="71" height="24" decoding="async" style="color:transparent" src="assets/images/d97ea0940c0302a26ddd7c1b56cf3346.svg"/>
+                <img alt="Huly logo" width="71" height="24" src="assets/images/d97ea0940c0302a26ddd7c1b56cf3346.svg">
             </a>
             <nav class="ml-[77px] md:hidden">
                 <ul class="flex">
-                    <li><a class="transition-colors duration-200 inline-flex whitespace-pre p-3 text-14 text-white transition-colors duration-200 hover:text-blue" href="pricing.html">Pricing</a></li>
+                    <li><a class="transition-colors duration-200 inline-flex whitespace-pre p-3 text-14 text-white hover:text-blue" href="pricing.html">Pricing</a></li>
                     <li class="group/navitem relative">
-                        <button class="inline-flex items-center gap-x-1.5 whitespace-pre p-3 text-14 text-white" type="button">Resources
-                            <img alt="" width="8" height="14" decoding="async" style="color:transparent" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAxMCA2Ij48cGF0aCBzdHJva2U9IiNmZmYiIHN0cm9rZS13aWR0aD0iMS40IiBkPSJtMSAxIDQgNCA0LTQiIG9wYWNpdHk9Ii42Ii8+PC9zdmc+"/>
+                        <button class="inline-flex items-center gap-x-1.5 whitespace-pre p-3 text-14 text-white" type="button">
+                            Resources
+                            <img alt="" width="8" height="14" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAxMCA2Ij48cGF0aCBzdHJva2U9IiNmZmYiIHN0cm9rZS13aWR0aD0iMS40IiBkPSJtMSAxIDQgNCA0LTQiIG9wYWNpdHk9Ii42Ii8+PC9zdmc+">
                         </button>
                         <div class="group-hover/navitem:opacity-1 invisible absolute bottom-0 w-max translate-y-full opacity-0 transition-[opacity,visibility] duration-200 group-hover/navitem:visible group-hover/navitem:opacity-100">
                             <ul class="flex min-w-[300px] flex-col gap-y-0.5 rounded-[14px] border border-grey-10 bg-grey-5 p-2.5 pb-3 shadow-[0px_14px_20px_rgba(0,0,0,0.5)]">
                                 <li class="group/subitem">
-                                    <a class="transition-colors duration-200 flex items-center whitespace-nowrap rounded-[14px] p-2 transition-colors duration-200 hover:bg-grey-10" target="_blank" rel="noopener noreferrer" href="blog.html">
+                                    <a class="transition-colors duration-200 flex items-center whitespace-nowrap rounded-[14px] p-2 hover:bg-grey-10" target="_blank" rel="noopener noreferrer" href="blog.html">
                                         <span class="ml-2 flex flex-col">
                                             <span class="text-14 leading-dense tracking-snugger text-white">Blog</span>
                                             <span class="mt-0.5 block text-14 font-light leading-dense tracking-snugger text-grey-50">Read our latest insights</span>
                                         </span>
-                                        <img alt="" width="10" height="6" decoding="async" class="ml-auto mr-1 -rotate-90 opacity-0 transition-opacity duration-200 group-hover/subitem:opacity-100" style="color:transparent" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAxMCA2Ij48cGF0aCBzdHJva2U9IiNmZmYiIHN0cm9rZS13aWR0aD0iMS40IiBkPSJtMSAxIDQgNCA0LTQiIG9wYWNpdHk9Ii42Ii8+PC9zdmc+"/>
+                                        <img alt="" width="10" height="6" class="ml-auto mr-1 -rotate-90 opacity-0 transition-opacity duration-200 group-hover/subitem:opacity-100" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAxMCA2Ij48cGF0aCBzdHJva2U9IiNmZmYiIHN0cm9rZS13aWR0aD0iMS40IiBkPSJtMSAxIDQgNCA0LTQiIG9wYWNpdHk9Ii42Ii8+PC9zdmc+">
                                     </a>
                                 </li>
-                                <!-- Add other resource items as needed -->
+                                <!-- Add other resource links similarly -->
                             </ul>
                         </div>
                     </li>
-                    <!-- Add Community and Download items as needed -->
+                    <!-- Add Community and Download similarly -->
                 </ul>
             </nav>
             <div class="ml-auto flex gap-x-3.5 md:mr-[52px] sm:hidden">
                 <a class="transition-colors duration-200 leading-none inline-flex items-center text-14 text-white px-1.5 hover:text-grey-80" href="https://github.com/hcengineering/platform" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 36 36" class="mr-1.5 aspect-square h-4 fill-white sm:mr-0 sm:h-6">
                         <path fill="currentColor" fill-rule="evenodd" d="M18 .45c-9.9 0-18 8.1-18 18 0 7.988 5.175 14.738 12.263 17.1.9.113 1.237-.337 1.237-.9v-3.037c-5.062 1.125-6.075-2.363-6.075-2.363-.787-2.025-2.025-2.587-2.025-2.587-1.688-1.125.112-1.125.112-1.125 1.8.112 2.813 1.8 2.813 1.8 1.575 2.7 4.163 1.912 5.288 1.462a3.9 3.9 0 0 1 1.125-2.362c-4.05-.45-8.213-2.025-8.213-8.888 0-1.912.675-3.6 1.8-4.837-.225-.45-.787-2.25.225-4.725 0 0 1.462-.45 4.95 1.8 1.463-.45 2.925-.563 4.5-.563s3.038.225 4.5.563c3.488-2.363 4.95-1.913 4.95-1.913 1.012 2.475.338 4.275.225 4.725 1.125 1.238 1.8 2.813 1.8 4.838 0 6.862-4.163 8.437-8.213 8.887.675.563 1.238 1.688 1.238 3.375v4.95c0 .45.337 1.013 1.238.9C30.825 33.188 36 26.438 36 18.45c0-9.9-8.1-18-18-18" clip-rule="evenodd"></path>
-                    </svg>Star Us
+                    </svg>
+                    Star Us
                 </a>
-                <a class="transition-colors duration-200 transition-all duration-200 uppercase font-bold flex items-center justify-center h-8 px-4 text-11 border-button-grey relative text-white tracking-snug md:hidden" href="login.html">Sign In</a>
-                <a class="transition-colors duration-200 transition-all duration-200 uppercase font-bold flex items-center justify-center h-8 px-4 text-11 border-button-grey relative text-white tracking-snug md:hidden" href="signup.html">Get Started</a>
+                <a class="transition-colors duration-200 uppercase font-bold flex items-center justify-center h-8 px-4 text-11 border-button-grey text-white tracking-snug md:hidden" href="login.html">Sign In</a>
+                <a class="transition-colors duration-200 uppercase font-bold flex items-center justify-center h-8 px-4 text-11 border-button-grey text-white tracking-snug md:hidden" href="signup.html">Get Started</a>
             </div>
         </div>
     </header>
+
+    <!-- Main Content -->
     <main>
         <section class="hero relative h-[1438px] overflow-hidden bg-grey-1 pt-[184px] px-safe lg:h-[1078px] lg:pt-28 md:h-auto md:pt-24 sm:pt-[92px]">
             <div class="container relative flex h-full flex-col">
                 <h1 class="relative z-30 max-w-[616px] bg-gradient-to-br from-white from-30% via-[#d5d8f6] via-80% to-[#fdf7fe] bg-clip-text font-title text-84 font-semibold leading-[0.9] tracking-tight text-transparent lg:max-w-[528px] lg:text-72 md:max-w-[441px] md:text-56 sm:max-w-64 sm:text-32">Everything App for your teams</h1>
                 <p class="relative z-30 mt-5 max-w-md text-18 leading-snug tracking-tight text-grey-90 lg:mt-4 md:mt-3.5 md:text-16 sm:mt-3 sm:max-w-[248px] sm:text-15">Huly, an open-source platform, serves as an all-in-one replacement of Linear, Jira, Slack, and Notion.</p>
                 <div class="mt-11 lg:mt-9 md:mt-7 sm:mt-5">
-                    <div class="relative inline-flex items-center z-10">
-                        <a class="transition-colors duration-200 transition-all duration-200 uppercase font-bold flex items-center justify-center h-10 px-16 text-12 text-black -tracking-[0.015em] relative z-10 overflow-hidden rounded-full border border-white/60 bg-[#d1d1d1] space-x-1 px-16 sm:pl-[59px] sm:pr-[52px]" href="signup.html">
-                            <span class="text-[#5A250A]">Try it Free</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 9" class="h-[9px] w-[17px] text-[#5A250A]">
-                                <path fill="currentColor" fill-rule="evenodd" d="m12.495 0 4.495 4.495-4.495 4.495-.99-.99 2.805-2.805H0v-1.4h14.31L11.505.99z" clip-rule="evenodd"></path>
-                            </svg>
-                        </a>
-                    </div>
+                    <a class="transition-colors duration-200 uppercase font-bold flex items-center justify-center h-10 px-16 text-12 text-black -tracking-[0.015em] relative z-10 overflow-hidden rounded-full border border-white/60 bg-[#d1d1d1] space-x-1 px-16 sm:pl-[59px] sm:pr-[52px]" href="signup.html">
+                        <span class="text-[#5A250A]">Try it Free</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 9" class="h-[9px] w-[17px] text-[#5A250A]">
+                            <path fill="currentColor" fill-rule="evenodd" d="m12.495 0 4.495 4.495-4.495 4.495-.99-.99 2.805-2.805H0v-1.4h14.31L11.505.99z" clip-rule="evenodd"></path>
+                        </svg>
+                    </a>
                 </div>
-                <div class="absolute bottom-0 left-6 aspect-[1.067842] w-[1574px] max-w-none lg:-bottom-[39px] lg:left-0 lg:w-[1220px] md:relative md:bottom-0 md:top-7 md:mb-6 md:mt-[-36%] md:w-[120%] sm:-top-3 sm:mb-[-15%] sm:mt-0 sm:w-full xs:top-1.5 xs:mb-2 xs:min-h-[350px] 2xs:aspect-auto">
-                    <img alt="" fetchPriority="high" width="1024" height="569" decoding="async" class="absolute bottom-[141px] left-2 rounded-t-[10px] lg:bottom-[138px] lg:left-9 lg:w-[873px] md:bottom-[9.5%] md:left-0 md:w-[78.4%] md:rounded-t-md sm:relative sm:bottom-auto sm:mt-[18.7%] sm:w-[100.5%] sm:min-w-[100.5%] sm:rounded-t xs:mt-[21.6%] xs:w-full xs:min-w-[376px] 2xs:mt-[70px]" style="color:transparent" src="assets/images/hero-illustration.7100a376.jpg"/>
+                <!-- Hero Video Placeholder -->
+                <div class="hero-video absolute bottom-0 left-6 w-[1574px] max-w-none lg:-bottom-[39px] lg:left-0 lg:w-[1220px] md:relative md:bottom-0 md:top-7 md:mb-6 md:mt-[-36%] md:w-[120%] sm:-top-3 sm:mb-[-15%] sm:mt-0 sm:w-full xs:top-1.5 xs:mb-2 xs:min-h-[350px] 2xs:aspect-auto">
+                    <video autoplay muted loop playsinline class="w-full h-full object-cover">
+                        <source src="assets/videos/hero.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
+                <img alt="Hero Illustration" width="1024" height="569" class="absolute bottom-[141px] left-2 rounded-t-[10px] lg:bottom-[138px] lg:left-9 lg:w-[873px] md:bottom-[9.5%] md:left-0 md:w-[78.4%] md:rounded-t-md sm:relative sm:bottom-auto sm:mt-[18.7%] sm:w-[100.5%] sm:min-w-[100.5%] sm:rounded-t xs:mt-[21.6%] xs:w-full xs:min-w-[376px] 2xs:mt-[70px]" src="assets/images/hero-illustration.7100a376_w-1920-q-75.jpg">
             </div>
         </section>
     </main>
+
+    <!-- Footer (simplified) -->
+    <footer class="absolute bottom-0 z-10 w-full overflow-hidden py-[17px] px-safe md:py-3.5">
+        <div class="container flex items-center text-14 leading-none tracking-snugger">
+            <p class="text-grey-40">Copyright © 2025 <a class="transition-colors duration-200 hover:text-white" href="https://hulylabs.com" target="_blank" rel="noopener noreferrer">Huly Labs</a>. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
