--- a/index.html
+++ b/index.html
@@ -1,80 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overscroll-y-none">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Huly - All-in-One Project Management</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="theme-color" content="#090a0c">
+    <title>Everything App for your teams</title>
+    <meta name="description" content="Huly, an open-source platform, serves as an all-in-one replacement of Linear, Jira, Slack, and Notion.">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- Preload Fonts and Images -->
+    <link rel="preload" href="assets/fonts/14d7ce3e41dcbb66-s.p.woff" as="font" type="font/woff2">
+    <link rel="preload" href="assets/fonts/1b0b3615811be75b-s.p.woff" as="font" type="font/woff2">
+    <link rel="preload" href="assets/fonts/a34f9d1faa5f3315-s.p.woff" as="font" type="font/woff2">
+    <link rel="preload" href="assets/fonts/c92e08b531692979-s.p.woff" as="font" type="font/woff2">
+    <link rel="preload" href="assets/fonts/e8b276476c0ac6fa-s.p.woff" as="font" type="font/woff2">
+    <link rel="preload" href="assets/images/d97ea0940c0302a26ddd7c1b56cf3346.svg" as="image">
+    <link rel="preload" href="assets/images/hero-illustration.7100a376_w-1920-q-75.jpg" as="image">
 </head>
-<body class="bg-grey-1 text-white">
-  <!-- Navigation Bar -->
-  <header class="container px-safe pt-safe relative z-40 h-16 bg-transparent transition-colors duration-200">
-    <nav class="flex items-center h-full">
-      <a href="/" class="text-18 font-title font-semibold text-white">Huly</a>
-      <div class="ml-auto flex items-center gap-x-3.5">
-        <!-- Desktop Links (Hidden on Mobile) -->
-        <div class="hidden lg:flex items-center gap-x-3.5">
-          <a href="/pricing" class="text-14 text-grey-90 hover:text-blue">Pricing</a>
-          <a href="/blog" class="text-14 text-grey-90 hover:text-blue">Blog</a>
-          <a href="#" class="text-14 text-grey-90 hover:text-blue">Star Us</a>
-          <a href="#" class="text-14 text-grey-90 hover:text-blue">Our latest insights</a>
-        </div>
-        <!-- Sign In Button -->
-        <a href="/signin" class="text-14 text-grey-90 hover:text-blue">Sign In</a>
-        <!-- Get Started Button -->
-        <a href="/get-started" class="border-button-grey h-8 px-4 text-11 font-bold uppercase tracking-snug text-white">Get Started</a>
-        <!-- Hamburger Menu (Visible on Mobile) -->
-        <button class="lg:hidden text-white">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-          </svg>
-        </button>
-      </div>
-    </nav>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="hero container relative overflow-hidden">
-    <div class="text-center">
-      <h1 class="text-84 font-title font-semibold leading-[0.9] tracking-tight text-white sm:text-44 md:text-64 lg:text-80">
-        Everything you need to manage your projects
-      </h1>
-      <p class="max-w-md mx-auto mt-11 text-18 leading-snug text-grey-90 sm:mt-5 md:mt-7 lg:mt-9">
-        Huly, an open-source platform, serves as an all-in-one replacement of Linear, Jira, Slack, Notion, and more.
-      </p>
-      <div class="mt-11 sm:mt-5 md:mt-7 lg:mt-9">
-        <a href="/try" class="inline-block rounded-full border border-white/60 bg-[#d1d1d1] px-16 py-3 text-12 font-bold uppercase tracking-snug text-black sm:pl-[59px] sm:pr-[52px]">
-          Try It Free
-        </a>
-      </div>
-    </div>
-    <!-- Hero Video -->
-    <div class="relative">
-      <video class="hero-video w-full h-full object-cover" autoplay muted loop playsinline>
-        <source src="assets/videos/hero.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-    <!-- Hero Image (Fallback or Overlay) -->
-    <img src="assets/images/hero-illustration.7100a376_w-1920-q-75.jpg" alt="Huly Platform Preview" class="absolute bottom-[141px] left-2 rounded-t-[10px] lg:bottom-[138px] lg:left-9 lg:w-[873px] md:bottom-[9.5%] md:left-0 md:w-[78.4%] md:rounded-t-md sm:relative sm:bottom-auto sm:mt-[18.7%] sm:w-[100.5%] sm:min-w-[100.5%] xs:mt-[21.6%] xs:w-full xs:min-w-[376px] 2xs:mt-[70px]">
-  </section>
-
-  <!-- Platform Preview Section (Simplified) -->
-  <section class="container py-16">
-    <div class="text-center">
-      <h2 class="text-32 font-title font-semibold text-white sm:text-24">See Huly in Action</h2>
-      <p class="max-w-md mx-auto mt-4 text-16 text-grey-90 sm:text-14">
-        Manage your projects, issues, and team communication seamlessly.
-      </p>
-    </div>
-    <div class="mt-8">
-      <img src="assets/images/social-previews/index.jpg" alt="Huly Platform Screenshot" class="w-full rounded-lg">
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="container py-8 text-center">
-    <p class="text-14 text-grey-90">Copyright © 2023 Huly Labs. All rights reserved.</p>
-  </footer>
+<body class="overscroll-y-none bg-grey-1">
+    <header class="absolute left-0 right-0 top-0 z-40 h-16 bg-transparent transition-colors duration-200 px-safe pt-safe">
+        <!-- Header content remains unchanged -->
+    </header>
+    <main>
+        <section class="hero relative h-[1438px] overflow-hidden bg-grey-1 pt-[184px] px-safe lg:h-[1078px] lg:pt-28 md:h-auto md:pt-24 sm:pt-[92px]">
+            <div class="container relative flex h-full flex-col">
+                <h1 class="relative z-30 max-w-[616px] bg-gradient-to-br from-white from-30% via-[#d5d8f6] via-80% to-[#fdf7fe] bg-clip-text font-title text-84 font-semibold leading-[0.9] tracking-tight text-transparent lg:max-w-[528px] lg:text-72 md:max-w-[441px] md:text-56 sm:max-w-64 sm:text-32">Everything App for your teams</h1>
+                <p class="relative z-30 mt-5 max-w-md text-18 leading-snug tracking-tight text-grey-90 lg:mt-4 md:mt-3.5 md:text-16 sm:mt-3 sm:max-w-[248px] sm:text-15">Huly, an open-source platform, serves as an all-in-one replacement of Linear, Jira, Slack, and Notion.</p>
+                <div class="mt-11 lg:mt-9 md:mt-7 sm:mt-5">
+                    <a class="transition-colors duration-200 uppercase font-bold flex items-center justify-center h-10 px-16 text-12 text-black -tracking-[0.015em] relative z-10 overflow-hidden rounded-full border border-white/60 bg-[#d1d1d1] space-x-1 px-16 sm:pl-[59px] sm:pr-[52px]" href="signup.html">
+                        <span class="text-[#5A250A]">Try it Free</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 9" class="h-[9px] w-[17px] text-[#5A250A]">
+                            <path fill="currentColor" fill-rule="evenodd" d="m12.495 0 4.495 4.495-4.495 4.495-.99-.99 2.805-2.805H0v-1.4h14.31L11.505.99z" clip-rule="evenodd"></path>
+                        </svg>
+                    </a>
+                </div>
+                <div class="hero-video">
+                    <video autoplay muted loop playsinline>
+                        <source src="assets/videos/hero.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <img alt="Hero Illustration" width="1024" height="569" class="absolute bottom-[141px] left-2 rounded-t-[10px] lg:bottom-[138px] lg:left-9 lg:w-[873px] md:bottom-[9.5%] md:left-0 md:w-[78.4%] md:rounded-t-md sm:relative sm:bottom-auto sm:mt-[18.7%] sm:w-[100.5%] sm:min-w-[100.5%] sm:rounded-t xs:mt-[21.6%] xs:w-full xs:min-w-[376px] 2xs:mt-[70px]" src="assets/images/hero-illustration.7100a376_w-1920-q-75.jpg">
+            </div>
+        </section>
+    </main>
+    <footer class="absolute bottom-0 z-10 w-full overflow-hidden py-[17px] px-safe md:py-3.5">
+        <!-- Footer content remains unchanged -->
+    </footer>
 </body>
 </html>
